force-app/main/default/objects/DocFab_Model_Selection__mdt/DocFab_Model_Selection__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for DocFab record model + form selection per market unit, form type, and optional user overrides.</description>
    <label>DocFab Model Selection</label>
    <pluralLabel>DocFab Model Selections</pluralLabel>
</CustomObject>