force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <description>Custom permission API name required to open/create this record model.</description>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>