force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Default_Field_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Configuration__c</fullName>
    <description>JSON mapping used when the current user matches the override path.</description>
    <label>Default Field Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>