force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Default_Form_UUID__c.field-meta.xml
<CustomField>
    <fullName>Default_Form_UUID__c</fullName>
    <description>Default form UUID to append when no explicit override is provided.</description>
    <label>Default Form UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>