force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Default_Record_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Record_Model__c</fullName>
    <description>Default DocFab record model id to use for this market unit/form type.</description>
    <label>Default Record Model</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>