force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Docfab_Journal_Object__c.field-meta.xml
<CustomField>
    <fullName>Docfab_Journal_Object__c</fullName>
    <description>DocFab journal object API name when linking back to Salesforce (for lookup updates).</description>
    <label>DocFab Journal Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>