force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>Logical form type identifier (unique name) used for selection.</description>
    <label>Form Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>