force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Form_UUID_Override__c.field-meta.xml
<CustomField>
    <fullName>Form_UUID_Override__c</fullName>
    <description>Optional form UUID to use when the running user is in the override list.</description>
    <label>Form UUID Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>