force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the default fallback for a Market Unit when no other configuration applies (only one per Market Unit).</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>