force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Market_Unit__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit__c</fullName>
    <description>Market unit key (e.g., DFJ_DK, FA_SE, Ireland) used in selection.</description>
    <label>Market Unit</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>