force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Human readable unique name for the configuration.</description>
    <label>Unique Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>