force-app/main/default/objects/DocFab_Model_Selection__mdt/fields/User_Override__c.field-meta.xml
<CustomField>
    <fullName>User_Override__c</fullName>
    <description>Comma-separated list of User Ids eligible for the override model/form.</description>
    <label>User Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>